Edited wiki page LinkPage through web user interface.

--- a/wiki/LinkPage.wiki
+++ b/wiki/LinkPage.wiki
@@ -7,7 +7,7 @@
 
  * [http://blogdodesenhador.blogspot.com/ http://i458.photobucket.com/albums/qq308/TheShock_album/blogtopo10122010.jpg]
 
-  
+ * [http://trabiscos.blogspot.com/ Jose Americo Gobo]
  * [http://www.davidrevoy.com/index.php?lang=en David Revoy]
  
 
