Edited wiki page LinkPage through web user interface.

--- a/wiki/LinkPage.wiki
+++ b/wiki/LinkPage.wiki
@@ -1,15 +1,14 @@
 #summary Links to relevant places
 #sidebar TableOfContents
 
-=Personal homepages and galleries= 
+=Personal GPS members galleries= 
 
- * [http://ramonmirandavisualart.blogspot.com/ http://i458.photobucket.com/albums/qq308/TheShock_album/RamonMiranda_header3.jpg]
-
- * [http://blogdodesenhador.blogspot.com/ http://i458.photobucket.com/albums/qq308/TheShock_album/blogtopo10122010.jpg]
-
+ * [http://ramonmirandavisualart.blogspot.com/ Ramón Miranda]
+ * [http://blogdodesenhador.blogspot.com/ Mozart Couto]
  * [http://trabiscos.blogspot.com/ Jose Americo Gobo]
  * [http://www.davidrevoy.com/index.php?lang=en David Revoy]
  
+Old members (not active)
 
  * [http://griatch-art.deviantart.com/ Griatch]
  * [http://www.alexkellyart.co.uk/ Alex Kelly]
