Edited wiki page LinkPage through web user interface.

--- a/wiki/LinkPage.wiki
+++ b/wiki/LinkPage.wiki
@@ -24,6 +24,8 @@ Old members (not active)
  
 
 =Resources links=
+
+ * [http://registry.gimp.org/ GIMP Plugin Registry]
  * [http://www.davidrevoy.com/?article29/free-brush-kit-for-chaos-and-evolutions David Revoy´s Chaos&Evolution brushes and presets kit]
 
 =Forums=
