--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -1,5 +1,5 @@
 #labels Featured
-you can download the PDF user guide on the Downloads section.
+PDF user guide on the Downloads section.
 http://code.google.com/p/gps-gimp-paint-studio/downloads/list
 
 http://1.bp.blogspot.com/-4htPBLUuXy8/TZnIE86IcJI/AAAAAAAAAvw/Az9Jcn0JlW0/s320/solo-GPS.jpg
@@ -70,5 +70,3 @@ GPS project Chairman
 
 GPS can be used for any purpose without restriction, under those terms:
 http://creativecommons.org/licenses/by-sa/3.0/ 
-
-
