--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -1,5 +1,5 @@
 #labels Featured
-PDF user guide on the Downloads section.
+PDF user guide on the Downloads section.</ BR>
 http://code.google.com/p/gps-gimp-paint-studio/downloads/list
 
 http://1.bp.blogspot.com/-4htPBLUuXy8/TZnIE86IcJI/AAAAAAAAAvw/Az9Jcn0JlW0/s320/solo-GPS.jpg
