Edited wiki page Features through web user interface.

--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -8,7 +8,7 @@ http://1.bp.blogspot.com/-4htPBLUuXy8/TZnIE86IcJI/AAAAAAAAAvw/Az9Jcn0JlW0/s320/s
 = Features of GPS =
 
 == PRESETS IN GIMP PAINT STUDIO ==
-*Display*
+*Better Layout Design*
 ----
 New bigger and reordered layout for better High Res Works. 
 It is nice to have big space where we can paint freely and comfortably. So GPS is been redesigned to achieve more space and better tools location.
