Edited wiki page Features through web user interface.

--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -70,9 +70,7 @@ http://www.davidrevoy.com/data/images/blog/2011/05/gps15-gimp-painter_02.jpg
 
 Gimp Paint Studio uses all the power of Gimp Painter fork.*
 You can mimic the complex texture stuff with these presets. And they blend color in real time . just check the following video to see how the mixbrush tool works.
-<wiki:video url="http://www.youtube.com/user/K005289?blend=24&ob=5#p/u/17/4xDpuzephiI"/>
-
-http://www.youtube.com/user/K005289?blend=24&ob=5#p/u/16/G1tCXz6eeyg
+<wiki:video url="http://www.youtube.com/watch?v=4xDpuzephiI&feature=related"/>
 
 The Gimp Painter fork can be located here.
 http://sourceforge.jp/projects/gimp-painter/releases/ 
