--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -69,7 +69,8 @@ http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/GimpPaint
 http://www.davidrevoy.com/data/images/blog/2011/05/gps15-gimp-painter_02.jpg
 
 Gimp Paint Studio uses all the power of Gimp Painter fork.*
-You can mimic the complex texture stuff with these presets. And they blend color in real time . just check the following video to see how the mixbrush tool works.
+You can mimic the complex texture stuff with these presets and they blend color in real time . just check the following video to see how the mixbrush tool works.
+
 <wiki:video url="http://www.youtube.com/watch?v=4xDpuzephiI&feature=related"/>
 
 The Gimp Painter fork can be located here.
